# playdex-course-builder

./: .gitignore  AGENTS.md  Cargo.toml
.ci/agent/: space-elevator.json
apps/player/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
apps/viewer/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
crates/app-cli/: Cargo.toml
crates/app-cli/src/: catalog_validation.rs  cli.rs  config.rs  llm.rs  main.rs  mineru.rs  mvp.rs  paths.rs  relevance.rs  validation.rs
crates/app-cli/tests/: cli_smoke.rs
crates/pipeline-core/: Cargo.toml
crates/pipeline-io/: Cargo.toml
crates/pipeline-mineru/: Cargo.toml
docs/: course-player-builder-prompt.md  course-player-spec.md  multi-course-learning-system-spec.md  player-runtime-architecture.md  progress.json  prototype.tsx
docs/progress_report_2/: email_draft.md  progress_report.html  progress_report.md
research/: .gitignore  README.md
research/docs/: progress.json
research/pipeline/: course-index.json
research/prompts/: guided_story_contract_executor_user.md  guided_story_contract_reviewer_user.md  guided_story_planner_user.md  guided_story_reviewer.md  guided_story_system.md  guided_story_user.md  guided_story_validator_user.md  question_bank_gate_user.md  question_bank_reviewer.md  question_bank_system.md  question_bank_user.md  textbook_reviewer.md  textbook_system.md  textbook_user.md
research/scripts/: check_progress_schema.py  (+4 more)
tools/: check_global_free_functions.py  image_annotation_mvp.py  test_responses_image_url_sample.py
(+1169 files in other folders)
